Fix spacing between source filters and source list

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -132,6 +132,7 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 0.5rem;
+    margin-bottom: 0.5rem;
 
     &__nsfw {
         &-wrapper {
